Fix the margin-bottom falsely applied for a block container if it is split by a column-span
Categories
(Core :: Layout: Columns, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox71 | --- | fixed |
People
(Reporter: TYLin, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
Attachments
(4 files)
Load the test case attached.
Some unexpected behavior of margin:
div.container
's margin-bottom is applied in the second column before column-span.block1
's margin-bottom seems missing.block2
's margin is missing.
Assignee | ||
Comment 1•5 years ago
|
||
There is related discussion in https://phabricator.services.mozilla.com/D43905
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
Assignee | ||
Comment 4•5 years ago
|
||
Also, clean up the wording and variable names when aReflowInput is used.
Depends on D47675
Assignee | ||
Comment 5•5 years ago
|
||
The proposed patches fix the obvious unexpected behavior (1) in comment 0 that we incorrectly apply container
's block-end margin before the column-span split.
Per spec "Adjoining Margins at Breaks",
When a forced break occurs there, adjoining margins before the break are truncated, but margins after the break are preserved.
For (2), column-span split is a kind of force-break (?) to me, so it seems ok we truncate block1
's block-end margin. For (3), Chrome and us both lack the block2
's block-start margin, so I don't the rush to fix it before shipping column-span.
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 9•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/614dba91c0b1
https://hg.mozilla.org/mozilla-central/rev/5921da698109
Description
•